--- a/src/App.css
+++ b/src/App.css
@@ -10,11 +10,22 @@ body {
   background-position: center center;
   background-size: cover;
   background-attachment: fixed;
+  height: 100%;
 }
+
 .fondoContact {
   background-image: linear-gradient(rgba(34, 51, 51, 0.9), rgba(34, 51, 51, 0.9)),
   url(contact-background.png);
   background-repeat: no-repeat;
   background-position: center center;
   background-size: cover;
+  height: 93.2vh;
+  z-index: 999;
+}
+
+@media all and (max-width: 768px) {
+  .fondoPortfolio {
+    height: 219vh;
+  }
+
 }
