--- a/src/App.css
+++ b/src/App.css
@@ -1,6 +1,7 @@
 body {
   background: url(coffee-apple.jpg) no-repeat center center fixed;
   background-size: cover;
+  -webkit-tap-highlight-color: transparent;
 }
 
 .fondoPortfolio {
